[package]
name            = "punkt_stable"
version         = "1.0.5"
authors         = ["Ferris Tseng <ferristseng@fastmail.fm>", "AimainaHito <AimainaHito@users.noreply.github.com>"]
keywords        = ["punkt", "sentence", "token", "tokenizer"]
license         = "MIT"
repository      = "https://github.com/ferristseng/rust-punkt"
description     = "An fork of rust-punkt which doesn't rely on unstable features"
readme          = "README.md"

[dependencies]
num             = "0.1"
rustc-serialize = "0.3"
rust-freqdist   = "0.1"
lazy_static     = "1.0"

[dev-dependencies]
walkdir         = "0.1"
